# jack_sayhello

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/jack_sayhello/: __init__.py  sayhello.py
tests/: test_sayhello.py
